devops/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-java-sample
spec:
  revisionHistoryLimit: 1
  replicas: 2

  template:
    metadata:
      labels:
        app: k8s-java-sample
    spec:
      containers:
      - name: k8s-java-sample
        image: mwrona/k8s-java-sample:0.0.8
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: postgres-secrets
          readOnly: true
          mountPath: "/etc/secrets/postgres-secrets"
        #resources:
        #    requests:
        #      cpu: 100m
        #      memory: 256Mi
        #    limits:
        #      cpu: 200m
        #      memory: 512Mi
        livenessProbe:
          httpGet:
            path: /probe/health
            port: 8080
            #httpHeaders:
            #  - name: X-Custom-Header
            #    value: Awesome
          initialDelaySeconds: 20
          timeoutSeconds: 1
          periodSeconds: 1
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /probe/ready
            port: 8080
            #httpHeaders:
            #  - name: X-Custom-Header
            #    value: Awesome
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 1
          failureThreshold: 3
          successThreshold: 1
      volumes:
        - name: postgres-secrets
          secret:
            secretName: "postgres-secrets"
