devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-java-sample
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name : http
  selector:
    app: k8s-java-sample
  type: NodePort
